crates/crochet_parser/src/snapshots/crochet_parser__type_ann__tests__fn_type_annotations-2.snap
---
source: crates/crochet_parser/src/type_ann.rs
expression: "parse_type(\"(a: A) => B & C | D\")"
---
Lam(
    LamType {
        span: 0..19,
        params: [
            TypeAnnFnParam {
                pat: Ident(
                    EFnParamBindingIdent {
                        span: 1..5,
                        id: Ident {
                            span: 1..2,
                            name: "a",
                        },
                    },
                ),
                type_ann: TypeRef(
                    TypeRef {
                        span: 4..5,
                        name: "A",
                        type_params: None,
                    },
                ),
            },
        ],
        ret: Union(
            UnionType {
                span: 10..19,
                types: [
                    Intersection(
                        IntersectionType {
                            span: 10..15,
                            types: [
                                TypeRef(
                                    TypeRef {
                                        span: 10..11,
                                        name: "B",
                                        type_params: None,
                                    },
                                ),
                                TypeRef(
                                    TypeRef {
                                        span: 14..15,
                                        name: "C",
                                        type_params: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    TypeRef(
                        TypeRef {
                            span: 18..19,
                            name: "D",
                            type_params: None,
                        },
                    ),
                ],
            },
        ),
        type_params: None,
    },
)
