crates/crochet_parser/src/snapshots/crochet_parser__type_ann__tests__fn_type_annotations-4.snap
---
source: crates/crochet_parser/src/type_ann.rs
expression: "parse_type(\"(a: A, b: B) => C | D\")"
---
Lam(
    LamType {
        span: 0..21,
        params: [
            Ident(
                BindingIdent {
                    span: 1..5,
                    id: Ident {
                        span: 1..2,
                        name: "a",
                    },
                    type_ann: Some(
                        TypeRef(
                            TypeRef {
                                span: 4..5,
                                name: "A",
                                type_params: None,
                            },
                        ),
                    ),
                },
            ),
            Ident(
                BindingIdent {
                    span: 7..11,
                    id: Ident {
                        span: 7..8,
                        name: "b",
                    },
                    type_ann: Some(
                        TypeRef(
                            TypeRef {
                                span: 10..11,
                                name: "B",
                                type_params: None,
                            },
                        ),
                    ),
                },
            ),
        ],
        ret: Union(
            UnionType {
                span: 16..21,
                types: [
                    TypeRef(
                        TypeRef {
                            span: 16..17,
                            name: "C",
                            type_params: None,
                        },
                    ),
                    TypeRef(
                        TypeRef {
                            span: 20..21,
                            name: "D",
                            type_params: None,
                        },
                    ),
                ],
            },
        ),
        type_params: None,
    },
)
