crates/crochet_parser/src/snapshots/crochet_parser__type_ann__tests__fn_type_annotations-5.snap
---
source: crates/crochet_parser/src/type_ann.rs
expression: "parse_type(\"((a: A, b: B) => C) | D\")"
---
Union(
    UnionType {
        span: 0..23,
        types: [
            Lam(
                LamType {
                    span: 1..18,
                    params: [
                        TypeAnnFnParam {
                            pat: Ident(
                                EFnParamBindingIdent {
                                    span: 2..6,
                                    id: Ident {
                                        span: 2..3,
                                        name: "a",
                                    },
                                },
                            ),
                            type_ann: TypeRef(
                                TypeRef {
                                    span: 5..6,
                                    name: "A",
                                    type_params: None,
                                },
                            ),
                            optional: false,
                        },
                        TypeAnnFnParam {
                            pat: Ident(
                                EFnParamBindingIdent {
                                    span: 8..12,
                                    id: Ident {
                                        span: 8..9,
                                        name: "b",
                                    },
                                },
                            ),
                            type_ann: TypeRef(
                                TypeRef {
                                    span: 11..12,
                                    name: "B",
                                    type_params: None,
                                },
                            ),
                            optional: false,
                        },
                    ],
                    ret: TypeRef(
                        TypeRef {
                            span: 17..18,
                            name: "C",
                            type_params: None,
                        },
                    ),
                    type_params: None,
                },
            ),
            TypeRef(
                TypeRef {
                    span: 22..23,
                    name: "D",
                    type_params: None,
                },
            ),
        ],
    },
)
