crates/crochet_parser/src/snapshots/crochet_parser__type_ann__tests__fn_type_annotations.snap
---
source: crates/crochet_parser/src/type_ann.rs
expression: "parse_type(\"(a: number, b: string) => boolean\")"
---
Lam(
    LamType {
        span: 0..33,
        params: [
            TypeAnnFnParam {
                pat: Ident(
                    EFnParamBindingIdent {
                        span: 1..10,
                        id: Ident {
                            span: 1..2,
                            name: "a",
                        },
                    },
                ),
                type_ann: Prim(
                    PrimType {
                        span: 4..10,
                        prim: Num,
                    },
                ),
                optional: false,
            },
            TypeAnnFnParam {
                pat: Ident(
                    EFnParamBindingIdent {
                        span: 12..21,
                        id: Ident {
                            span: 12..13,
                            name: "b",
                        },
                    },
                ),
                type_ann: Prim(
                    PrimType {
                        span: 15..21,
                        prim: Str,
                    },
                ),
                optional: false,
            },
        ],
        ret: Prim(
            PrimType {
                span: 26..33,
                prim: Bool,
            },
        ),
        type_params: None,
    },
)
