crates/crochet_parser/src/snapshots/crochet_parser__type_ann__tests__literal_type_annotations-3.snap
---
source: crates/crochet_parser/src/type_ann.rs
expression: "parse_type(\"false\")"
---
Lit(
    Bool(
        Bool {
            span: 0..5,
            value: false,
        },
    ),
)
