crates/crochet_parser/src/snapshots/crochet_parser__type_ann__tests__literal_type_annotations-4.snap
---
source: crates/crochet_parser/src/type_ann.rs
expression: "parse_type(\"1.23\")"
---
Lit(
    Num(
        Num {
            span: 0..4,
            value: "1.23",
        },
    ),
)
