crates/crochet_parser/src/snapshots/crochet_parser__type_ann__tests__literal_type_annotations-5.snap
---
source: crates/crochet_parser/src/type_ann.rs
expression: "parse_type(\"5\")"
---
Lit(
    Num(
        Num {
            span: 0..1,
            value: "5",
        },
    ),
)
