crates/crochet_parser/src/snapshots/crochet_parser__type_ann__tests__literal_type_annotations.snap
---
source: crates/crochet_parser/src/type_ann.rs
expression: "parse_type(r#\"\"hello\"\"#)"
---
Lit(
    Str(
        Str {
            span: 0..7,
            value: "hello",
        },
    ),
)
