crates/crochet_parser/src/snapshots/crochet_parser__type_ann__tests__misc_type_annotations.snap
---
source: crates/crochet_parser/src/type_ann.rs
expression: "parse_type(\"Promise<number>\")"
---
TypeRef(
    TypeRef {
        span: 0..15,
        name: "Promise",
        type_params: Some(
            [
                Prim(
                    PrimType {
                        span: 8..14,
                        prim: Num,
                    },
                ),
            ],
        ),
    },
)
